--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <!-- Add Favicon -->
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico', _scheme='https', _external=True) }}">
 
-    <title>WYSPA</title>
+    <title>The Raffle</title>
 </head>
 
 {% if GMAPS_API %}
@@ -42,25 +42,20 @@
                        <li {% if active_page == "index" %} class="active" {% endif %}><a tabindex="-1"
                         href="{{ url_for('index') }}">Home</a></li>
 
-                        {%if current_user.is_authenticated %}
+                        
                         <li {% if active_page == "admin" %} class="active" {% endif %}><a tabindex="-1"
                                 href="{{ url_for('admin') }}">Admin</a></li>
-                        {% endif %}
 
-                        {%if current_user.is_authenticated %}
+                        <li {% if active_page == "select" %} class="active" {% endif %}><a tabindex="-1"
+                                href="{{ url_for('select') }}">Select</a></li>
 
-                        <li><a tabindex="-1" href="{{ url_for('logout') }}">Logout</a></li>
 
-                        {% else %}
 
-                        <li><a tabindex="-1" href="#loginModal" class="modal-trigger sidenav-close">Login</a></li>
-                        <li><a tabindex="-1" href="#registerModal" class="modal-trigger sidenav-close">Register</a></li>
-
-                        {% endif %}
+       
 
                     </ul>
 
-                    <a href="{{ url_for('index') }}" class="brand-logo center heading-font">WYSPA</a>
+                    <a href="{{ url_for('index') }}" class="brand-logo center heading-font">Alzeimer's Raffle</a>
 
 
                     <a href="#helpModal" class="modal-trigger">
@@ -77,21 +72,11 @@
                 <li {% if active_page == "index" %} class="active" {% endif %}><a tabindex="-1"
                         href="{{ url_for('index') }}">Home</a></li>
 
-                {%if current_user.is_authenticated %}
                         <li {% if active_page == "admin" %} class="active" {% endif %}><a tabindex="-1"
                                 href="{{ url_for('admin') }}">Admin</a></li>
-                {% endif %}
-
-                {%if current_user.is_authenticated %}
-
-                <li><a tabindex="-1" href="{{ url_for('logout') }}">Logout</a></li>
-
-                {% else %}
-
-                <li><a tabindex="-1" href="#loginModal" class="modal-trigger sidenav-close">Login</a></li>
-                <li><a tabindex="-1" href="#registerModal" class="modal-trigger sidenav-close">Register</a></li>
-
-                {% endif %}
+               
+                                                        <li {% if active_page == "select" %} class="active" {% endif %}><a tabindex="-1"
+                                href="{{ url_for('select') }}">Select</a></li>
             </ul>
 
         </section>
@@ -103,83 +88,7 @@
         </main>
 
 
-
-
-        <!-- Login Modal -->
-        <div id="loginModal" class="modal">
-            <div class="modal-content center">
-                <h4>Login</h4>
-
-                <div class="row">
-                    <form class="col s12" method="POST" action="{{url_for('login')}}">
-                        <div class="row">
-                            <div class="input-field login-field col s12">
-                                <i class="material-icons prefix">group</i>
-                                <input id="usernameLogin" name="usernameLogin" type="text" class="validate" required>
-                                <label for="usernameLogin">Username</label>
-                            </div>
-                            <div class="input-field login-field col s12">
-                                <i class="material-icons prefix">lock</i>
-                                <input id="passwordLogin" name="passwordLogin" type="password" class="validate"
-                                    required>
-                                <label for="passwordLogin">Password</label>
-                            </div>
-                        </div>
-                        <div class="row footer-modal">
-                            <button class="btn login-button waves-effect waves-light" type="submit" name="action">Log In
-                                <i class="material-icons right">check_circle</i>
-                            </button>
-                            <button class="btn login-button modal-close waves-effect waves-light" type="button">Close<i
-                                    class="material-icons right">cancel</i></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <!-- Register Modal -->
-        <div id="registerModal" class="modal">
-            <div class="modal-content center">
-                <h4>Register</h4>
-                <div class="row">
-                    <!-- Error Container -->
-                    <div class="error-message"></div>
-                    <!-- Register Form -->
-                    <form class="col s12 user-registration" method="POST" action="{{url_for('register')}}">
-                        <div class="row no-margin">
-                            <!-- Username -->
-                            <div class="input-field login-field col s12">
-                                <i class="material-icons prefix">group</i>
-                                <input id="usernameRegister" name="usernameRegister" type="text" class="validate"
-                                    required>
-                                <label for="usernameRegister">Username</label>
-                            </div>
-                            <!-- Password -->
-                            <div class="input-field login-field col s12">
-                                <i class="material-icons prefix">lock</i>
-                                <input id="passwordRegister" name="passwordRegister" type="password" class="validate"
-                                    pattern="^(?=.*[^a-zA-Z]).{6,20}$" required>
-                                <label for="passwordRegister">Password</label>
-                            </div>
-                            <!-- Confirm Password -->
-                            <div class="input-field login-field col s12">
-                                <i class="material-icons prefix">lock_open</i>
-                                <input id="passwordConfirm" name="passwordConfirm" type="password" required>
-                                <label for="passwordConfirm">Confirm Password</label>
-                            </div>
-                        </div>
-                        <div class="row footer-modal">
-                            <button class="btn login-button waves-effect waves-light" type="submit"
-                                name="action">Register
-                                <i class="material-icons right">check_circle</i>
-                            </button>
-                            <button class="btn login-button modal-close waves-effect waves-light" type="button">Close<i
-                                    class="material-icons right">cancel</i></button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
+ 
 
 
         <!-- Materialize JS Import -->
@@ -190,9 +99,6 @@
 
         <!-- Javascript custom Toast Script Import -->
         <script src="{{ url_for('static', filename='js/toasts.js', _scheme='https', _external=True) }}"> </script>
-
-        <!-- Javascript custom Validation Script Import -->
-        <script src="{{ url_for('static', filename='js/validate.js', _scheme='https', _external=True) }}"> </script>
 
         <!-- https://stackoverflow.com/questions/15321431/how-to-pass-a-list-from-python-by-jinja2-to-javascript -->
         <!-- Flash Messages -->
